--- a/src/sass/all.scss
+++ b/src/sass/all.scss
@@ -2,3 +2,4 @@
 @import "layout.scss";
 @import url(http://fonts.googleapis.com/css?family=Open+Sans:400italic,700italic,400,800,700);
 @import "style.scss";
+@import "ajax.scss";
