--- a/assets/css/all.css
+++ b/assets/css/all.css
@@ -141,8 +141,21 @@ body { width: 96%; margin: 0 4%; }
 
 .clear { clear: both; }
 
+/* Forms */
+label { display: block; }
+
+input[type='text'] { display: block; width: 100%; }
+
+textarea { width: 100%; height: 150px; }
+
+input, textarea { margin: 1% inherit; }
+
 body { background: white; color: black; font-family: "Open Sans", sans-serif; }
 
 h1, h2, h3, h4, h5, h6 { font-family: "Open Sans", sans-serif; font-weight: 800; }
 h1 a, h2 a, h3 a, h4 a, h5 a, h6 a { text-decoration: none; }
 h1 a:hover, h2 a:hover, h3 a:hover, h4 a:hover, h5 a:hover, h6 a:hover { text-decoration: underline; }
+
+.formError { background: #880000; color: white; -webkit-border-radius: 10px; border-radius: 10px; padding: 10px; }
+
+#newHeadacheForm { display: none; }
