--- a/assets/css/layout.css
+++ b/assets/css/layout.css
@@ -21,3 +21,12 @@ body { width: 96%; margin: 0 4%; }
 @media (max-width: 799px) { .col-6 { width: 100%; } }
 
 .clear { clear: both; }
+
+/* Forms */
+label { display: block; }
+
+input[type='text'] { display: block; width: 100%; }
+
+textarea { width: 100%; height: 150px; }
+
+input, textarea { margin: 1% inherit; }
