--- a/src/sass/layout.scss
+++ b/src/sass/layout.scss
@@ -35,3 +35,18 @@ body {
 	clear: both;
 }
 
+/* Forms */
+label {
+	display: block;
+}
+input[type='text'] {
+	display: block;
+	width: 100%;
+}
+textarea {
+	width: 100%;
+	height: 150px;
+}
+input, textarea {
+	margin: 1% inherit;
+}
